<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
>

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:background="@layout/gradient"
	    tools:context=".Mpg_Calculation" >
	
	    <TextView
	        android:id="@+id/mpgTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
			android:layout_centerHorizontal="true"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="#ffffff"
	        android:textStyle="bold"
	        android:text="@string/mpgTitle" />
	    
	    <TextView
	        android:id="@+id/mpgIntro"
	        android:paddingTop="15dp"
	        android:textSize="18sp"
	        android:textColor="#cccccc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/mpgTitle"
	        android:gravity="center"
	        android:text="@string/mpgIntro" />
	    
	    <TextView
	        android:id="@+id/distance_label"
	        android:paddingTop="25dp"
	        android:paddingLeft="10dp"
	        android:textSize="18sp"
	        android:textColor="#cccccc"
	        android:textStyle="bold" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/mpgIntro"
	        android:gravity="center"
	        android:text="@string/distance_label" />
	    
	    <EditText
		    android:id="@+id/distance"
		    android:paddingTop="8dp"
		    android:textColor="#FF0000"
		    android:layout_below="@id/distance_label"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:hint="@string/enter_miles_covered"
		    android:inputType="numberDecimal" />
	    
	    <TextView
	        android:id="@+id/litres_label"
	        android:paddingTop="25dp"
	        android:paddingLeft="10dp"
	        android:textSize="18sp"
	        android:textColor="#cccccc"
	        android:textStyle="bold" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/distance"
	        android:gravity="center"
	        android:text="@string/litres_label" />
	    
	    <EditText
		    android:id="@+id/litres"
		    android:paddingTop="8dp"
		    android:textColor="#0000FF"
		    android:layout_below="@id/litres_label"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:hint="@string/enter_litres"
		    android:inputType="numberDecimal" />
	    
	    <TextView
	        android:id="@+id/price_label"
	        android:paddingTop="25dp"
	        android:paddingLeft="10dp"
	        android:textSize="18sp"
	        android:textColor="#cccccc"
	        android:textStyle="bold" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/litres"
	        android:gravity="center"
	        android:text="@string/price_label" />
	    
	    <EditText
		    android:id="@+id/price"
		    android:paddingTop="8dp"
		    android:textColor="#008000"
		    android:layout_below="@id/price_label"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:hint="@string/enter_price"
		    android:inputType="numberDecimal" />
	
		<ImageButton
	            android:id="@+id/btn_calc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/price"
	            android:paddingTop="35dp"
	            android:paddingBottom="60dp"
	            android:layout_centerHorizontal="true"
	            android:background="@null"
	            android:scaleType="centerInside"
	            android:src="@drawable/ic_btn_calc" />
		  	    
			<TextView
		        android:id="@+id/lbl_result"
		        android:paddingTop="50dp"
		        android:paddingLeft="5dp"
		        android:textSize="21sp"
		        android:textColor="#cccccc"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"/>
			
			<ImageButton
	            android:id="@+id/btn_recalc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="15dp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@+id/lbl_result"
	            android:background="@null"
	            android:scaleType="centerInside"
	            android:visibility="invisible"
	            android:onClick="Recalculate"
	            android:src="@drawable/ic_btn_recalc" />
			
			<ImageButton
	            android:id="@+id/btn_history"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="15dp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@+id/btn_recalc"
	            android:background="@null"
	            android:scaleType="centerInside"
	            android:visibility="invisible"
	            android:onClick="openHistory"
	            android:src="@drawable/ic_btn_history" />
					
			<ImageButton
	            android:id="@+id/btn_home"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="15dp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@+id/btn_history"
	            android:background="@null"
	            android:scaleType="centerInside"
	            android:visibility="invisible"
	            android:onClick="openHome"
	            android:src="@drawable/ic_btn_home" />	
	            
		<include 
				layout="@layout/adview"
				android:id="@+id/adView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true" />	
	            

	</RelativeLayout>
</ScrollView>
